--- a/paginas/fase1.html
+++ b/paginas/fase1.html
@@ -24,9 +24,11 @@
                                 <div>
                                     <div id='mensagens'>
                                         <p id="t-jogo">Clique no botão <strong><span class="blink"><u>Adicionar Vértice</u></span></strong> para escolher a quantidade de pontos.</p>
+                                        <p id="t-pintar" style="display: none;">Selecione <strong><span class="blink"><u>três vértices</u></span></strong> para pintar um triângulo.</p>
                                             <div class="mensagens-div mensagensDiv1">
                                                 <p id="mensagem-texto" class="mensagem-texto mensagemTexto msgDiv blink"></p>
                                             </div> 
+                                            <button id="proximoFase" style="display:none;" onclick="window.location.href='./Desafio.html'">Desafio 1.html</button>
                                     </div>
                                 </div>
                         </section>
