Tudo Funcionando em 09/05/2025 às 22:11

--- a/paginas/desafio1.html
+++ b/paginas/desafio1.html
@@ -68,7 +68,7 @@
         Criado por Pablo e Greice em 2025
     </footer>
         <script src="../logica/fase1.js"></script>
-        <script src="../logica/desafio.js"></script>
+        <script src="../logica/desafio1.js"></script>
         <script src="../logica/pintar.js"></script>
         <script src="../logica/resetar.js"></script>    
         <script src="../logica/salvar.js"></script>
