--- a/paginas/fase1.html
+++ b/paginas/fase1.html
@@ -23,8 +23,7 @@
                             <h3 id="t-bem">Fase 1 – Polígonos</h3>
                                 <div>
                                     <div id='mensagens'>
-                                        <p id="t-jogo">Clique no botão <strong><span class="blink"><u>Adicionar Vértice</u></span></strong> para escolher a quantidade de pontos.</p>
-                                        <p id="t-pintar" style="display: none;">Selecione <strong><span class="blink"><u>três vértices</u></span></strong> para pintar um triângulo.</p>
+                                        <p id="t-jogo" style='background-color: orange; font-size: 26px; text-align: center;'>Clique no botão <strong><span class="blink"><br> <u> Adicionar Vértice </u> </span></strong> <br> para escolher a <br> quantidade de pontos.</p>
                                             <div class="mensagens-div mensagensDiv1">
                                                 <p id="mensagem-texto" class="mensagem-texto mensagemTexto msgDiv blink"></p>
                                             </div> 
