Tudo Funcionando em 11/05/2025 às 00:30

--- a/paginas/desafio1.html
+++ b/paginas/desafio1.html
@@ -34,9 +34,9 @@
         <section>
         <fieldset id="orientacao">
             <legend><strong>Perguntas do Quiz 1 - Polígonos:</strong></legend>
+                <div id="imgQuiz" class="texto-na-frente"><img src="../imagens/malhas.gif" id="img10" style="display: block; opacity: 0.6;"></div>
                 <div id="quiz-container" class="controls1">
-                    <div id="pergunta" >
-                    <div class="imgQuiz" style="opacity: 0.5; display:none;"><img src="../imagens/malhas.gif" id="imgQuiz"></div>
+                    <div id="pergunta">                    
                     </div>
                 </div>
         </fieldset>
@@ -45,7 +45,7 @@
             <fieldset id="orientacao">
                 <legend><b>Menu:</b></legend>
                     <div class="controls">                        
-                        <button id="instruções" onclick="window.location.href='./index.html'"><strong>Voltar</strong></button>
+                        <button id="instruções" onclick="window.location.href='../index.html'"><strong>Voltar</strong></button>
                         <button id="Sair" onclick="window.location.href='https://www.google.com.br'"><strong>Sair</strong></button></div>
                         <div id="proximoFase" class="controls"><button style="display: none" onclick="window.location.href='./desafio2.html'"><strong>Próximo Desafio</strong></button></div>
                         <div id="ReiniciarFase" class="controls"><button style="display: none" onclick="window.location.href='./desafio1.html'"><strong>Reiniciar Quiz</strong></button></div>
