Tudo Funcionando , falta ajustar imprimir 11/05/25 às 3h42

--- a/paginas/fase1.html
+++ b/paginas/fase1.html
@@ -45,10 +45,10 @@
             <fieldset class="controls">
                 <legend><strong>Controles:</strong></legend>
                 <div class="draggable" id="addVertex" draggable="true">
-                    <button class="paint-button"><img src="../imagens/ponto-final.png" class="icon" alt="Ícone de ponto">Adicionar Vértice</button>
+                    <button id="AdicionarVertice" class="paint-button"><img src="../imagens/ponto-final.png" class="icon" alt="Ícone de ponto">Adicionar Vértice</button>
                 </div>
                 <div class="draggable" id="addEdge" draggable="true">
-                    <button class="paint-button"><img src="../imagens/reta.png" class="icon" alt="Ícone de reta">Adicionar Aresta</button>
+                    <button id="AdicionarAresta" class="paint-button"><img src="../imagens/reta.png" class="icon" alt="Ícone de reta">Adicionar Aresta</button>
                 </div>
                 <div class="draggable" id="pintar" draggable="true">
                     <button id="pintarElementos"><img src="../imagens/pincel.png" class="pincel" alt="Ícone de pincel">Pintar Elementos</button>
