Textt a´ra fçavop

--- a/paginas/indice.html
+++ b/paginas/indice.html
@@ -73,7 +73,7 @@
         <div class="ind-controles" >
             <fieldset id="ind-controles" >
               <button id="Index" onclick="window.location.href='../index.html'">Voltar</button>
-              <button id="Instrucao" onclick="window.location.href='./instrucao.html'">Fase 1</button>
+              <button id="Instrucao" onclick="window.location.href='./desafio1.html'">Fase 1</button>
               <button id="Sair" onclick="window.location.href='https://www.google.com.br'">Sair</button>
             </fieldset>
         </div>
